--- a/Seguridad/SistemasIntegrados/forms/Properties/Resources.resx
+++ b/Seguridad/SistemasIntegrados/forms/Properties/Resources.resx
@@ -154,8 +154,8 @@
   <data name="recursoshumanos" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\recursoshumanos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="16-perfiles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16-perfiles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="consultar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\consultar.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -174,6 +174,9 @@
   </data>
   <data name="24_privilegiosusuarios" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\24_privilegiosusuarios.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="16-horario" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16-horario.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="24-contrasena" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\24-contrasena.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -217,13 +220,13 @@
   <data name="tiposUsuario" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tiposUsuario.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="16-horario" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\16-horario.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="16-perfiles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16-perfiles.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="activofijo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\activofijo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="image" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="16-em-plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\16-em-plus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
